k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  namespace: gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels:
        app: gitops-app
    spec:
      containers:
        - name: gitops-app
          image: siddhuge/gitops-app:deb6ee46e46ce83426a6f7bc6a5aee2227fae01c
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
